src/parser/Compiler.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Compiler.java */
import java.io.FileInputStream;
import java.io.FileOutputStream;
import java.io.InputStream;
import java.util.Scanner;
public class Compiler/*@bgen(jjtree)*/implements CompilerTreeConstants, CompilerConstants {/*@bgen(jjtree)*/
  protected static JJTCompilerState jjtree = new JJTCompilerState();/** Main entry point. */
    public static void main(String args[]) {
        try {
            String fileName=args[args.length - 1];
            DeleteComments deleteComments = new DeleteComments();
            String input = deleteComments.clearComment(fileName);
            getStringStream inputs = new getStringStream();
            InputStream inputstream = inputs.getStringStream2(input);
            Compiler t = new Compiler(inputstream);
            try {
                SimpleNode n = t.Start();
                n.dump("");
                System.out.println("Over");
            } catch (Exception e) {
                System.out.println("Oops.");
                System.out.println(e.getMessage());
                e.printStackTrace();
            }
        } catch (Exception e) {
                                        System.out.println( "\u76ee\u6807\u6587\u4ef6\u4e0d\u5b58\u5728!");
        }
    }

/** 程序入口.
 * 实现全局变量的定义
 * 自定义函数的定义
 * 主函数
 */
  static final public SimpleNode Start() throws ParseException {
                     /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        if (jj_2_1(3)) {
          ;
        } else {
          break label_1;
        }
        VariableDefinition();
        jj_consume_token(SEMICOLON_TOKEN);
      }
      label_2:
      while (true) {
        if (jj_2_2(3)) {
          ;
        } else {
          break label_2;
        }
        FunctionDefinition();
      }
      MainFunction();
      label_3:
      while (true) {
        if (jj_2_3(3)) {
          ;
        } else {
          break label_3;
        }
        VariableDefinition();
        jj_consume_token(SEMICOLON_TOKEN);
      }
      label_4:
      while (true) {
        if (jj_2_4(3)) {
          ;
        } else {
          break label_4;
        }
        FunctionDefinition();
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/** 变量定义部分. */
  static final public void VariableDefinition() throws ParseException {
                            /*@bgen(jjtree) VariableDefinition */
  SimpleNode jjtn000 = new SimpleNode(JJTVARIABLEDEFINITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONST_TOKEN:
        jj_consume_token(CONST_TOKEN);
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      jj_consume_token(INT_TOKEN);
      jj_consume_token(ID_TOKEN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL_TOKEN:
        jj_consume_token(EQUAL_TOKEN);
        Choice();
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA_TOKEN:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMMA_TOKEN);
        jj_consume_token(ID_TOKEN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EQUAL_TOKEN:
          jj_consume_token(EQUAL_TOKEN);
          Choice();
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/** 自定义函数定义部分. */
  static final public void FunctionDefinition() throws ParseException {
                            /*@bgen(jjtree) FunctionDefinition */
  SimpleNode jjtn000 = new SimpleNode(JJTFUNCTIONDEFINITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT_TOKEN:
        jj_consume_token(INT_TOKEN);
        jj_consume_token(ID_TOKEN);
        break;
      case VOID_TOKEN:
        jj_consume_token(VOID_TOKEN);
        jj_consume_token(ID_TOKEN);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(LPAREN_TOKEN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT_TOKEN:
        ParaDefinition();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN_TOKEN);
      PartProgram();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/** 函数变量定义部分. */
  static final public void ParaDefinition() throws ParseException {
                        /*@bgen(jjtree) ParaDefinition */
  SimpleNode jjtn000 = new SimpleNode(JJTPARADEFINITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(INT_TOKEN);
      jj_consume_token(ID_TOKEN);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA_TOKEN:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMA_TOKEN);
        jj_consume_token(INT_TOKEN);
        jj_consume_token(ID_TOKEN);
      }
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/** 主函数部分 */
  static final public void MainFunction() throws ParseException {
                      /*@bgen(jjtree) MainFunction */
  SimpleNode jjtn000 = new SimpleNode(JJTMAINFUNCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MAIN_TOKEN);
      jj_consume_token(LPAREN_TOKEN);
      jj_consume_token(RPAREN_TOKEN);
      PartProgram();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/**
 * 分程序部分
 * 如果分程序为void且没有返回值，则自动补上返回值（退栈语句）
 */
  static final public void PartProgram() throws ParseException {
                    /*@bgen(jjtree) PartProgram */
  SimpleNode jjtn000 = new SimpleNode(JJTPARTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LBRACE_TOKEN);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF_TOKEN:
        case CONST_TOKEN:
        case INT_TOKEN:
        case WHILE_TOKEN:
        case FOR_TOKEN:
        case PRINTF_TOKEN:
        case RETURN_TOKEN:
        case ID_TOKEN:
        case SEMICOLON_TOKEN:
        case LBRACE_TOKEN:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_7;
        }
        Word();
      }
      jj_consume_token(RBRACE_TOKEN);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/** 语句 */
  static final public void Word() throws ParseException {
 /*@bgen(jjtree) Word */
  SimpleNode jjtn000 = new SimpleNode(JJTWORD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF_TOKEN:
        If_Word();
        break;
      case WHILE_TOKEN:
      case FOR_TOKEN:
        For_Word();
        break;
      default:
        jj_la1[9] = jj_gen;
        if (jj_2_5(2)) {
          jj_consume_token(LBRACE_TOKEN);
          label_8:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IF_TOKEN:
            case CONST_TOKEN:
            case INT_TOKEN:
            case WHILE_TOKEN:
            case FOR_TOKEN:
            case PRINTF_TOKEN:
            case RETURN_TOKEN:
            case ID_TOKEN:
            case SEMICOLON_TOKEN:
            case LBRACE_TOKEN:
              ;
              break;
            default:
              jj_la1[8] = jj_gen;
              break label_8;
            }
            Word();
          }
          jj_consume_token(RBRACE_TOKEN);
        } else if (jj_2_6(2)) {
          DefinitionFunction();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ID_TOKEN:
            Equals_Word();
            break;
          case RETURN_TOKEN:
            Return_Word();
            break;
          case PRINTF_TOKEN:
            WriteWord();
            break;
          case CONST_TOKEN:
          case INT_TOKEN:
            VariableDefinition();
            jj_consume_token(SEMICOLON_TOKEN);
            break;
          case SEMICOLON_TOKEN:
            jj_consume_token(SEMICOLON_TOKEN);
            break;
          default:
            jj_la1[10] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/** 条件语句 */
  static final public void If_Word() throws ParseException {
                /*@bgen(jjtree) If_Word */
  SimpleNode jjtn000 = new SimpleNode(JJTIF_WORD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF_TOKEN);
      jj_consume_token(LPAREN_TOKEN);
      Expression();
      jj_consume_token(RPAREN_TOKEN);
      Word();
      if (jj_2_7(2)) {
        jj_consume_token(ELSE_TOKEN);
        Word();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/** 循环语句 */
  static final public void For_Word() throws ParseException {
                 /*@bgen(jjtree) For_Word */
  SimpleNode jjtn000 = new SimpleNode(JJTFOR_WORD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHILE_TOKEN:
        jj_consume_token(WHILE_TOKEN);
        jj_consume_token(LPAREN_TOKEN);
        Expression();
        jj_consume_token(RPAREN_TOKEN);
        Word();
        break;
      case FOR_TOKEN:
        jj_consume_token(FOR_TOKEN);
        jj_consume_token(LPAREN_TOKEN);
        Equals_Word();
        Expression();
        jj_consume_token(SEMICOLON_TOKEN);
        Equals_Word2();
        jj_consume_token(RPAREN_TOKEN);
        Word();
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/** 赋值语句 */
  static final public void Equals_Word() throws ParseException {
                    /*@bgen(jjtree) Equals_Word */
  SimpleNode jjtn000 = new SimpleNode(JJTEQUALS_WORD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ID_TOKEN);
      jj_consume_token(EQUAL_TOKEN);
      Choice();
      jj_consume_token(SEMICOLON_TOKEN);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Choice() throws ParseException {
               /*@bgen(jjtree) Choice */
  SimpleNode jjtn000 = new SimpleNode(JJTCHOICE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID_TOKEN:
      case NUM_TOKEN:
      case PLUS_TOKEN:
      case MINUS_TOKEN:
      case NOT_TOKEN:
      case LPAREN_TOKEN:
        Expression();
        break;
      case READ_TOKEN:
        jj_consume_token(READ_TOKEN);
        jj_consume_token(LPAREN_TOKEN);
        jj_consume_token(RPAREN_TOKEN);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/** 赋值语句 */
  static final public void Equals_Word2() throws ParseException {
                     /*@bgen(jjtree) Equals_Word2 */
  SimpleNode jjtn000 = new SimpleNode(JJTEQUALS_WORD2);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ID_TOKEN);
      jj_consume_token(EQUAL_TOKEN);
      Expression();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/** 返回语句 */
  static final public void Return_Word() throws ParseException {
                    /*@bgen(jjtree) Return_Word */
  SimpleNode jjtn000 = new SimpleNode(JJTRETURN_WORD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN_TOKEN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID_TOKEN:
      case NUM_TOKEN:
      case PLUS_TOKEN:
      case MINUS_TOKEN:
      case NOT_TOKEN:
      case LPAREN_TOKEN:
        Expression();

        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON_TOKEN);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/** 写语句 */
  static final public void WriteWord() throws ParseException {
                  /*@bgen(jjtree) WriteWord */
  SimpleNode jjtn000 = new SimpleNode(JJTWRITEWORD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PRINTF_TOKEN);
      jj_consume_token(LPAREN_TOKEN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID_TOKEN:
      case NUM_TOKEN:
      case PLUS_TOKEN:
      case MINUS_TOKEN:
      case NOT_TOKEN:
      case LPAREN_TOKEN:
        Expression();
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN_TOKEN);
      jj_consume_token(SEMICOLON_TOKEN);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Expression() throws ParseException {
                    /*@bgen(jjtree) Expression */
  SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      logic_and();
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OR:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_9;
        }
        jj_consume_token(OR);
        logic_and();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//逻辑与
  static final public void logic_and() throws ParseException {
                  /*@bgen(jjtree) logic_and */
  SimpleNode jjtn000 = new SimpleNode(JJTLOGIC_AND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      equality();
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_10;
        }
        jj_consume_token(AND);
        equality();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

//逻辑等与不等
  static final public void equality() throws ParseException {
                 /*@bgen(jjtree) equality */
  SimpleNode jjtn000 = new SimpleNode(JJTEQUALITY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      comparison();
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case YESDY:
        case NOTDY:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_11;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case YESDY:
          jj_consume_token(YESDY);
          break;
        case NOTDY:
          jj_consume_token(NOTDY);
          break;
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        comparison();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

//逻辑判断 : 优先级低于加减
  static final public void comparison() throws ParseException {
                   /*@bgen(jjtree) comparison */
  SimpleNode jjtn000 = new SimpleNode(JJTCOMPARISON);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      add();
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case XY:
        case XYDY:
        case DY:
        case DYDY:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_12;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case XY:
          jj_consume_token(XY);
          break;
        case XYDY:
          jj_consume_token(XYDY);
